adding burger menu

--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
   <body>
     <header>
       <div class="company__logo"></div>
-      <nav></nav>
+      <nav>
+        <div class="burger__menu">
+          <div class="burger__menu__line"></div>
+          <div class="burger__menu__line"></div>
+          <div class="burger__menu__line"></div>
+        </div>
+      </nav>
     </header>
     <main>
       <section></section>
