added google fonts and color pallet

--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
   </head>
   <body>
     <header>
-      <div class="company__logo"></div>
+      <div class="company__logo">
+        <a href="index.html">
+          <img src="images/logos/logo_transparent.png" alt="company logo" />
+        </a>
+      </div>
       <nav>
         <div class="burger__menu">
           <div class="burger__menu__line"></div>
