header mobile layout complete

--- a/index.html
+++ b/index.html
@@ -4,22 +4,26 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/main.css" />
     <title>Living Organic</title>
   </head>
   <body>
     <header>
-      <div class="company__logo">
-        <a href="index.html">
-          <img src="images/logos/logo_transparent.png" alt="company logo" />
-        </a>
-      </div>
-      <nav>
-        <div class="burger__menu">
-          <div class="burger__menu__line"></div>
-          <div class="burger__menu__line"></div>
-          <div class="burger__menu__line"></div>
+      <div class="header__wrap">
+        <div class="company__logo">
+          <a href="index.html">
+            <img src="images/logos/logo_transparent.png" alt="company logo" />
+          </a>
         </div>
-      </nav>
+        <nav>
+          <div class="burger__menu">
+            <div class="burger__menu__line"></div>
+            <div class="burger__menu__line"></div>
+            <div class="burger__menu__line"></div>
+          </div>
+        </nav>
+      </div>
+      <div class="header__line"></div>
     </header>
     <main>
       <section></section>
