--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
       <div class="header__wrap">
         <div class="company__logo">
           <a href="index.html">
-            <img src="images/logos/logo_transparent.png" alt="company logo" />
+            <img
+              src="images/logos/logo_transparent_sm.png"
+              alt="company logo"
+            />
           </a>
         </div>
         <nav>
