--- a/index.html
+++ b/index.html
@@ -34,14 +34,31 @@
       <div class="header__line"></div>
     </header>
     <main>
-      <section></section>
-      <section></section>
-      <section></section>
-      <section></section>
-      <section></section>
-      <section></section>
-      <section></section>
-      <section></section>
+      <section class="one">
+        <div class="section__wrap">
+          <div class="one__card">
+            <div class="one__card__text">
+              <h1>Living Organic</h1>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Dolores, suscipit. Neque vel voluptas optio? Ipsam illum
+                laboriosam delectus, harum adipisci libero et deserunt
+                reiciendis molestiae provident accusamus hic soluta atque!
+              </p>
+              <a href="#">learn more</a>
+            </div>
+            <img src="images/chef_header.jpg" alt="picture of chef" />
+            <img src="" alt="" />
+          </div>
+        </div>
+      </section>
+      <section class="two"></section>
+      <section class="three"></section>
+      <section class="four"></section>
+      <section class="five"></section>
+      <section class="six"></section>
+      <section class="seven"></section>
+      <section class="eight"></section>
     </main>
     <footer></footer>
     <script src="js/app.js"></script>
