typography for section one done

--- a/index.html
+++ b/index.html
@@ -37,6 +37,12 @@
       <section class="one">
         <div class="section__wrap">
           <div class="one__card">
+            <img
+              class="chef__img"
+              src="images/chef_header.jpg"
+              alt="picture of chef"
+            />
+            <img class="fern__img" src="images/fern2.jpg" alt="fern leaves" />
             <div class="one__card__text">
               <h1>Living Organic</h1>
               <p>
@@ -47,8 +53,6 @@
               </p>
               <a href="#">learn more</a>
             </div>
-            <img src="images/chef_header.jpg" alt="picture of chef" />
-            <img src="" alt="" />
           </div>
         </div>
       </section>
