added striped bottom to section one card and add typography to card text

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
               </p>
               <a href="#">learn more</a>
             </div>
+            <div class="one__card__stripes"></div>
           </div>
         </div>
       </section>
