--- a/index.html
+++ b/index.html
@@ -35,13 +35,14 @@
     </header>
     <main>
       <section class="one">
-        <div class="section__wrap">
+        <div class="wrap section__one__wrap">
+          <img class="fern" src="images/fern2.jpg" alt="fern leaf" />
           <img
             class="chef__img"
             src="images/chef_header.jpg"
             alt="picture of chef"
           />
-          <img class="fern__img" src="images/fern2.jpg" alt="fern leaves" />
+
           <div class="one__card">
             <div class="one__card__text">
               <h1>Living Organic</h1>
