changed images for section one

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
     <main>
       <section class="one">
         <div class="wrap section__one__wrap">
-          <img class="fern" src="images/fern2.jpg" alt="fern leaf" />
+          <img class="fern" src="images/fern3.jpg" alt="fern leaf" />
           <img
             class="chef__img"
-            src="images/chef_header.jpg"
+            src="images/chef_header2.jpg"
             alt="picture of chef"
           />
 
