section one breakpoint and positioning for 600px

--- a/index.html
+++ b/index.html
@@ -35,26 +35,27 @@
     </header>
     <main>
       <section class="one">
-        <div class="wrap section__one__wrap">
-          <img class="fern" src="images/fern3.jpg" alt="fern leaf" />
-          <img
-            class="chef__img"
-            src="images/chef_header2.jpg"
-            alt="picture of chef"
-          />
-
-          <div class="one__card">
-            <div class="one__card__text">
-              <h1>Living Organic</h1>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Dolores, suscipit. Neque vel voluptas optio? Ipsam illum
-                laboriosam delectus, harum adipisci libero et deserunt
-                reiciendis molestiae provident accusamus hic soluta atque!
-              </p>
-              <a href="#">learn more</a>
+        <div class="wrap">
+          <div class="section__one__wrap">
+            <img class="fern" src="images/fern3.jpg" alt="fern leaf" />
+            <img
+              class="chef__img"
+              src="images/chef_header2.jpg"
+              alt="picture of chef"
+            />
+            <div class="one__card">
+              <div class="one__card__text">
+                <h1>Living Organic</h1>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Dolores, suscipit. Neque vel voluptas optio? Ipsam illum
+                  laboriosam delectus, harum adipisci libero et deserunt
+                  reiciendis molestiae provident accusamus hic soluta atque!
+                </p>
+                <a href="#">learn more</a>
+              </div>
+              <div class="one__card__stripes"></div>
             </div>
-            <div class="one__card__stripes"></div>
           </div>
         </div>
       </section>
