completed positioning of images for desktop in section one

--- a/index.html
+++ b/index.html
@@ -37,12 +37,14 @@
       <section class="one">
         <div class="wrap">
           <div class="section__one__wrap">
-            <img class="fern" src="images/fern3.jpg" alt="fern leaf" />
-            <img
-              class="chef__img"
-              src="images/chef_header2.jpg"
-              alt="picture of chef"
-            />
+            <div class="header__img__wrap">
+              <img class="fern" src="images/fern3.jpg" alt="fern leaf" />
+              <img
+                class="chef__img"
+                src="images/chef_header2.jpg"
+                alt="picture of chef"
+              />
+            </div>
             <div class="one__card">
               <div class="one__card__text">
                 <h1>Living Organic</h1>
