basic html layout of section two

--- a/index.html
+++ b/index.html
@@ -61,7 +61,25 @@
           </div>
         </div>
       </section>
-      <section class="two"></section>
+      <section class="two">
+        <div class="wrap">
+          <div class="icon_info">
+            <img src="" alt="" />
+            <h2></h2>
+            <p></p>
+          </div>
+          <div class="icon_info">
+            <img src="" alt="" />
+            <h2></h2>
+            <p></p>
+          </div>
+          <div class="icon_info">
+            <img src="" alt="" />
+            <h2></h2>
+            <p></p>
+          </div>
+        </div>
+      </section>
       <section class="three"></section>
       <section class="four"></section>
       <section class="five"></section>
