added icons to section two

--- a/index.html
+++ b/index.html
@@ -64,19 +64,28 @@
       <section class="two">
         <div class="wrap">
           <div class="icon_info">
-            <img src="" alt="" />
-            <h2></h2>
-            <p></p>
+            <img src="images/icons/apple.svg" alt="A single Apple icon" />
+            <h2>Organic</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ratione,
+              dolorum?
+            </p>
           </div>
           <div class="icon_info">
-            <img src="" alt="" />
-            <h2></h2>
-            <p></p>
+            <img src="images/icons/recycle-symbol.svg" alt="A recycle icon" />
+            <h2>Recycle</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed,
+              accusantium.
+            </p>
           </div>
           <div class="icon_info">
-            <img src="" alt="" />
-            <h2></h2>
-            <p></p>
+            <img src="images/icons/bananas.svg" alt="A single Banana icon" />
+            <h2>Products</h2>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Soluta,
+              voluptas?
+            </p>
           </div>
         </div>
       </section>
