flex for both mobile and desktop section two

--- a/index.html
+++ b/index.html
@@ -62,9 +62,11 @@
         </div>
       </section>
       <section class="two">
-        <div class="wrap">
+        <div class="wrap flex__wrap">
           <div class="icon_info">
-            <img src="images/icons/apple.svg" alt="A single Apple icon" />
+            <div class="icon__background">
+              <img src="images/icons/apple.svg" alt="A single Apple icon" />
+            </div>
             <h2>Organic</h2>
             <p>
               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ratione,
@@ -72,7 +74,9 @@
             </p>
           </div>
           <div class="icon_info">
-            <img src="images/icons/recycle-symbol.svg" alt="A recycle icon" />
+            <div class="icon__background">
+              <img src="images/icons/recycle-symbol.svg" alt="A recycle icon" />
+            </div>
             <h2>Recycle</h2>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed,
@@ -80,7 +84,9 @@
             </p>
           </div>
           <div class="icon_info">
-            <img src="images/icons/bananas.svg" alt="A single Banana icon" />
+            <div class="icon__background">
+              <img src="images/icons/bananas.svg" alt="A single Banana icon" />
+            </div>
             <h2>Products</h2>
             <p>
               Lorem ipsum, dolor sit amet consectetur adipisicing elit. Soluta,
