section three html basic layout

--- a/index.html
+++ b/index.html
@@ -95,7 +95,28 @@
           </div>
         </div>
       </section>
-      <section class="three"></section>
+      <section class="three">
+        <div class="wrap">
+          <div class="img1">
+            <img src="" alt="" />
+          </div>
+          <div class="list1">
+            <ol>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+            </ol>
+          </div>
+          <div class="img2">
+            <img src="" alt="" />
+          </div>
+          <div class="three__info_card"></div>
+          <div class="img3">
+            <img src="" alt="" />
+          </div>
+        </div>
+      </section>
       <section class="four"></section>
       <section class="five"></section>
       <section class="six"></section>
