--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       <section class="three">
         <div class="wrap">
           <div class="img1">
-            <img src="" alt="" />
+            <img src="images/food1.jpg" alt="washing fruit" />
           </div>
           <div class="list1">
             <ol>
@@ -109,11 +109,14 @@
             </ol>
           </div>
           <div class="img2">
-            <img src="" alt="" />
+            <img src="images/food2.jpg" alt="eggs benedict on plate" />
           </div>
           <div class="three__info_card"></div>
           <div class="img3">
-            <img src="" alt="" />
+            <img
+              src="images/food3.jpg"
+              alt="fruit smoothie with straw and mint leaves as decoration"
+            />
           </div>
         </div>
       </section>
