completed list and info card section 3

--- a/index.html
+++ b/index.html
@@ -102,16 +102,25 @@
           </div>
           <div class="list1">
             <ol>
-              <li></li>
-              <li></li>
-              <li></li>
-              <li></li>
+              <li>Good Food</li>
+              <li>Great Life</li>
+              <li>Health</li>
+              <li>Wisdom</li>
             </ol>
           </div>
           <div class="img2">
             <img src="images/food2.jpg" alt="eggs benedict on plate" />
           </div>
-          <div class="three__info_card"></div>
+          <div class="three__info_card">
+            <h2>Reduce, Reuse, Recycle</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae
+              provident dicta odit consectetur est libero amet eius quaerat eos,
+              fugiat officia nulla nesciunt asperiores quis id modi dignissimos
+              omnis non dolorum aspernatur.
+            </p>
+            <a href="index.html">learn more</a>
+          </div>
           <div class="img3">
             <img
               src="images/food3.jpg"
