added grid for mobile view section3

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         </div>
       </section>
       <section class="three">
-        <div class="wrap">
+        <div class="wrap grid__wrap">
           <div class="img1">
             <img src="images/food1.jpg" alt="washing fruit" />
           </div>
