added stripe seperator between section 3 and 4

--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
           </div>
         </div>
       </section>
+      <div class="stripe__seperator"></div>
       <section class="four"></section>
       <section class="five"></section>
       <section class="six"></section>
