html layout section four

--- a/index.html
+++ b/index.html
@@ -130,7 +130,32 @@
         </div>
       </section>
       <div class="stripe__seperator"></div>
-      <section class="four"></section>
+      <section class="four">
+        <div class="wrap">
+          <div class="four__list">
+            <h2>Organic Restaurants</h2>
+            <ol>
+              <li>Island Grill</li>
+              <li>Flavoroso</li>
+              <li>Green Curry</li>
+              <li>El Pirata Porch</li>
+              <li>Sweet Escape</li>
+              <li>Salty Squid</li>
+              <li>Bangalore Spices</li>
+            </ol>
+          </div>
+          <div class="four__info_card">
+            <h2>Non-GMO Foods</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+              quaerat beatae nemo nisi iure quos, voluptates earum minus
+              corrupti neque provident officia odit iste autem repellendus sit
+              exercitationem veniam odio, rem doloremque. Fuga, quae
+              accusantium?
+            </p>
+          </div>
+        </div>
+      </section>
       <section class="five"></section>
       <section class="six"></section>
       <section class="seven"></section>
