added grid for mobile and desktop section 4

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
       </section>
       <div class="stripe__seperator"></div>
       <section class="four">
-        <div class="wrap">
+        <div class="wrap grid__wrap">
           <div class="four__list">
             <h2>Organic Restaurants</h2>
             <ol>
