updated seection four grid sizing

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
       <section class="four">
         <div class="wrap grid__wrap">
           <div class="four__list">
-            <h2>Organic Restaurants</h2>
+            <h2>Organic Eateries</h2>
             <ol>
               <li>Island Grill</li>
               <li>Flavoroso</li>
