section five layout for mobile and desktop complete

--- a/index.html
+++ b/index.html
@@ -156,7 +156,22 @@
           </div>
         </div>
       </section>
-      <section class="five"></section>
+      <section class="five">
+        <div class="wrap">
+          <div class="mission__card">
+            <h2>Our Mission</h2>
+            <h3>10 ideas to go green</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus ea
+              sunt quisquam molestiae quod nostrum sint blanditiis officia quas
+              ut, architecto a inventore, suscipit excepturi maxime accusamus
+              pariatur? Architecto ab pariatur quos consequuntur inventore
+              laudantium, mollitia doloremque excepturi deserunt aut fuga,
+              labore molestiae atque eos ullam sunt assumenda nesciunt! Natus.
+            </p>
+          </div>
+        </div>
+      </section>
       <section class="six"></section>
       <section class="seven"></section>
       <section class="eight"></section>
