layout section 6 complete

--- a/index.html
+++ b/index.html
@@ -172,7 +172,19 @@
           </div>
         </div>
       </section>
-      <section class="six"></section>
+      <section class="six">
+        <div class="wrap">
+          <div><img src="images/lower1.jpg" alt="image of food" /></div>
+          <div><img src="images/lower2.jpg" alt="image of food" /></div>
+          <div>
+            <h2>Reducing Waste</h2>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas
+              commodi ipsum natus, impedit maxime facilis fugiat!
+            </p>
+          </div>
+        </div>
+      </section>
       <section class="seven"></section>
       <section class="eight"></section>
     </main>
