styling and typography section 6 complete

--- a/index.html
+++ b/index.html
@@ -174,9 +174,13 @@
       </section>
       <section class="six">
         <div class="wrap">
-          <div><img src="images/lower2.jpg" alt="image of food" /></div>
-          <div><img src="images/lower3.jpg" alt="image of food" /></div>
-          <div>
+          <div class="lower2">
+            <img src="images/lower2.jpg" alt="image of food" />
+          </div>
+          <div class="lower3">
+            <img src="images/lower3.jpg" alt="image of food" />
+          </div>
+          <div class="six__info_card">
             <h2>Reducing Waste</h2>
             <p>
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas
