--- a/index.html
+++ b/index.html
@@ -164,10 +164,12 @@
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus ea
               sunt quisquam molestiae quod nostrum sint blanditiis officia quas
-              ut, architecto a inventore, suscipit excepturi maxime accusamus
-              pariatur? Architecto ab pariatur quos consequuntur inventore
-              laudantium, mollitia doloremque excepturi deserunt aut fuga,
-              labore molestiae atque eos ullam sunt assumenda nesciunt! Natus.
+              ut, architecto a inventore, suscipit excepturi maxime accusamus?
+            </p>
+            <p>
+              Architecto ab pariatur quos consequuntur inventore laudantium,
+              mollitia doloremque excepturi deserunt aut fuga, labore molestiae
+              atque eos ullam sunt assumenda nesciunt! Natus.
             </p>
           </div>
         </div>
