section seven layout complete

--- a/index.html
+++ b/index.html
@@ -191,7 +191,19 @@
           </div>
         </div>
       </section>
-      <section class="seven"></section>
+      <section class="seven">
+        <div class="wrap">
+          <div class="mission__card">
+            <h3>Using Resources Efficiently</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus ea
+              sunt quisquam molestiae quod nostrum sint blanditiis officia quas
+              ut, architecto a inventore, suscipit excepturi maxime accusamus?
+            </p>
+            <a href="index.html">learn more</a>
+          </div>
+        </div>
+      </section>
       <section class="eight"></section>
     </main>
     <footer></footer>
