--- a/index.html
+++ b/index.html
@@ -204,7 +204,16 @@
           </div>
         </div>
       </section>
-      <section class="eight"></section>
+      <section class="eight">
+        <div class="wrap">
+          <form action="">
+            <input type="text" name="" id="" />
+            <input type="email" name="" id="" />
+            <textarea name="message" id="" cols="30" rows="10"></textarea>
+            <button type="submit">submit</button>
+          </form>
+        </div>
+      </section>
     </main>
     <footer></footer>
     <script src="js/app.js"></script>
