--- a/index.html
+++ b/index.html
@@ -207,9 +207,15 @@
       <section class="eight">
         <div class="wrap">
           <form action="">
-            <input type="text" name="" id="" />
-            <input type="email" name="" id="" />
-            <textarea name="message" id="" cols="30" rows="10"></textarea>
+            <input type="text" name="name" id="name" placeholder="name" />
+            <input type="email" name="email" id="email" placeholder="email" />
+            <textarea
+              name="message"
+              placeholder="Message"
+              id=""
+              cols="30"
+              rows="10"
+            ></textarea>
             <button type="submit">submit</button>
           </form>
         </div>
