added company logo and social icons to section eight

--- a/index.html
+++ b/index.html
@@ -218,6 +218,13 @@
             ></textarea>
             <button type="submit">submit</button>
           </form>
+          <img src="images/logos/logo_transparent_sm.png" alt="company logo" />
+          <div class="social">
+            <img src="images/icons/facebook (2).svg" alt="FB icon" /><img
+              src="images/icons/instagram-logo.svg"
+              alt="insta logo"
+            /><img src="images/icons/linkedin (1).svg" alt="linkedin icon" />
+          </div>
         </div>
       </section>
     </main>
