--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer>&copy;2021</footer>
     <script src="js/app.js"></script>
   </body>
 </html>
